# plotserver-hsapi

./: .gitignore  LICENSE  README.md  plotserver-api.cabal
Plotserver/: Api.hs  Types.hs
