Name:			plotserver-api
Version:		0.0
Description:		Plotserver API
License:		GPL
--License-file:		LICENSE
Author:			Daniel Torok
Maintainer:		daniel.torok@prezi.com
Build-Type:		Simple
Cabal-Version:		>=1.2

Library
  Build-Depends:	base >= 3 && < 5
                    curl
  Exposed-modules:	Plotserver.Api
  extensions:       OverloadedStrings
  ghc-options:	    -Wall
